Fixing spacing issues

--- a/pem_ui/assets/css/dashboard.css
+++ b/pem_ui/assets/css/dashboard.css
@@ -125,11 +125,10 @@ th {
 #loader {
   position: absolute;
   left: 80%;
-  top: 10.5%;
+  top: 68px;
   z-index: 1;
   width: 150px;
   height: 150px;
-  margin: -75px 0 0 -75px;
   border: 16px solid #f3f3f3;
   border-radius: 50%;
   border-top: 16px solid #3498db;
